# Auth_sprint_2

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
auth_service/: .env_example  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  nginx.conf  pyproject.toml
auth_service/alembic/: env.py
auth_service/alembic/versions/: 2024_06_02_0828-9a71074344e9_create_table.py  2024_06_16_0057-92e0bece0dd9_oauth_account.py  2024_06_16_1457-248b576f9bd4_auth_history.py  2024_06_16_1458-2673d5d0dc6f_partitional_table.py
auth_service/src/: main.py
auth_service/src/api/v1/: auth_history.py  healthcheck.py  login.py  role.py  user.py
auth_service/src/commands/: main_cli.py
auth_service/src/constants/: oauth_providers.py  permissions.py
auth_service/src/core/: config.py  jaeger.py  logger.py
auth_service/src/db/: cache.py  postgres.py
auth_service/src/db/models/: __init__.py  authentication_history.py  oauth.py  role.py  user.py
auth_service/src/helpers/: key_pair_generation.py
auth_service/src/repositories/: auth_history.py  base.py  oauth.py  role.py  user.py
auth_service/src/schemas/: auth_history.py  model_config.py  role.py  user.py
auth_service/src/services/: auth_history.py  oauth.py  roles.py  user.py
auth_service/src/tests/: .env_example_test  README.md  conftest.py  settings.py
auth_service/src/tests/functional/: test_auth.py  test_auth_history.py  test_login.py  test_roles.py
auth_service/src/tests/test_data/: user.py
auth_service/src/utils/: check_request_limit.py  general.py  jwt.py  mixins.py
(+37 files in other folders)
